--- a/index.html
+++ b/index.html
@@ -1,13 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment-02</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/8dfbf4d350.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <!-- ---------------Header Start------- -------------------------------->
+    <header>
+      <div class="header-container">
+        <h2 class="first-title">Influencer Products</h2>
+        <div class="full-part">
+          <div class="title-part">
+            <h1 class="title">
+              Start your journey <br />
+              as Influencer
+            </h1>
+            <p>
+              We bring together an influential community of content creators to
+              interact with brands looking to collaborate and create inspiring
+              stories
+            </p>
+            <a class="button" href="#"
+              >Book Now <i class="fas fa-arrow-right"></i
+            ></a>
+          </div>
+          <div class="image-part">
+            <img src="./images/main-camera.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </header>
+    <!---------------------------------------  Main Part------------------------------------------------------------------------------>
+    <main>
+      <section class="container">
+        <h2 class="product-title">Popular Collection</h2>
+        <div class="cards">
+          <div class="card">
+            <img src="./images/drone.png" alt="" />
+            <h2 class="card-title">Drone</h2>
+            <h3 class="price">$50.48</h3>
+            <span class="star-rating">
+                <span class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </span>
+                <span>4.9</span>
+            </span>
+            <p>Worldwide shifting <br>available <br>
+            Buyers protection possible! </p>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
