--- a/index.html
+++ b/index.html
@@ -45,22 +45,207 @@
           <div class="card">
             <img src="./images/drone.png" alt="" />
             <h2 class="card-title">Drone</h2>
+            <h3 class="price">$980.25.48</h3>
+            <span class="star-rating">
+              <span class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </span>
+              <span>4.9</span>
+            </span>
+            <p>
+              Worldwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="./images/airpod.png" alt="" />
+            <h2 class="card-title">Airbuds</h2>
+            <h3 class="price">$100.00</h3>
+            <span class="star-rating">
+              <span class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </span>
+              <span>4.9</span>
+            </span>
+            <p>
+              Worldwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="./images/action.png" alt="" />
+            <h2 class="card-title">Action Camera</h2>
+            <h3 class="price">$380.00</h3>
+            <span class="star-rating">
+              <span class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </span>
+              <span>4.9</span>
+            </span>
+            <p>
+              Worldwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="./images/drone.png" alt="" />
+            <h2 class="card-title">Drone</h2>
             <h3 class="price">$50.48</h3>
             <span class="star-rating">
-                <span class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </span>
-                <span>4.9</span>
+              <span class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </span>
+              <span>4.9</span>
             </span>
-            <p>Worldwide shifting <br>available <br>
-            Buyers protection possible! </p>
+            <p>
+              Worldwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="./images/camera.png" alt="" />
+            <h2 class="card-title">Vlogging Camera</h2>
+            <h3 class="price">$1800.80</h3>
+            <span class="star-rating">
+              <span class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </span>
+              <span>4.9</span>
+            </span>
+            <p>
+              Worldwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="./images/lights.png" alt="" />
+            <h2 class="card-title">Light Setup</h2>
+            <h3 class="price">$1200.00</h3>
+            <span class="star-rating">
+              <span class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </span>
+              <span>4.9</span>
+            </span>
+            <p>
+              Worldwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="./images/mic.png" alt="" />
+            <h2 class="card-title">Microphone</h2>
+            <h3 class="price">$120.25</h3>
+            <span class="star-rating">
+              <span class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </span>
+              <span>4.9</span>
+            </span>
+            <p>
+              Worldwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="./images/tripod.png" alt="" />
+            <h2 class="card-title">Flex Tripod</h2>
+            <h3 class="price">$50.48</h3>
+            <span class="star-rating">
+              <span class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </span>
+              <span>4.9</span>
+            </span>
+            <p>
+              Worldwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="./images/setup.png" alt="" />
+            <h2 class="card-title">Photoshoot Set</h2>
+            <h3 class="price">$820.80</h3>
+            <span class="star-rating">
+              <span class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </span>
+              <span>4.9</span>
+            </span>
+            <p>
+              Worldwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
           </div>
         </div>
+        <a class="see-more" href="#"
+          >See More <i class="fas fa-arrow-right"></i
+        ></a>
       </section>
     </main>
+    <!--------------------------------------- Extra Part------------------------- -->
+    <section>
+      <div class="form">
+        <h2>Contact Me</h2>
+        <div class="contact">
+          <input type="text" placeholder="youremail@gmail.com" />
+          <br />
+          <input type="text" placeholder="Your Name" />
+          <br />
+          <input id="subBtn" type="submit" value="SEND" />
+          <br />
+        </div>
+    </section>
+<!-- -------------------------------Last Part ------------------------------------------->
+    <footer>
+      <h1>Influencer Products</h1>
+      <p>
+        Copyright <i class="far fa-copyright"></i> 2020 influencer products.
+        <br />
+        All rights reserved
+      </p>
+      <span>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-dribbble-square"></i>
+        <i symbol class="fab fa-twitter"></i>
+        <i symbol class="fab fa-youtube-square"></i>
+      </span>
+    </footer>
   </body>
 </html>
