--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               Start your journey <br />
               as Influencer
             </h1>
-            <p>
+            <p class="header-p">
               We bring together an influential community of content creators to
               interact with brands looking to collaborate and create inspiring
               stories
