--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     ></script>
   </head>
   <body>
-    <!-- ---------------Header Start------- -------------------------------->
+    <!-- ---------------Header Start Part------- -------------------------------->
     <header>
       <div class="header-container">
         <h2 class="first-title">Influencer Products</h2>
